- Made RemoteTech distance function (for coverage system) more generous (thanks NathanKell).
- Fixed issue with Kerbals spawned at KSC starting an extra ~60 meters in the air (thanks Keniamin).
- Fixed error when cancelling a contract with spawned Kerbals.
- Fixed exception with FlyBy and ReturnFromFlyBy requirements.

Contract Configurator 1.23.1
- Fixed major bug with VisitWaypoint not properly setting waypoint distances (thanks Keniamin and others).
- Fixed issue with FacilityRequirement in tracking station (thanks JPLRepo).
- Fixed issue where some requirement details weren't being saved in contracts.
- Fixed localisation issue with character names in dialog boxes.
- Fixed exception when pressing orbit buttons in tracking station (thanks doktorstick).

Contract Configurator 1.23.0
- Support for KSP 1.3.0
- Fix issue with contract item sizes not always being set correctly in mission control when switching tabs.
- Fixed "input is null" error in Docking parameter (thanks linuxgurugamer).
- Fixed to not generate contracts without parameters (thanks severedsolo).
- Fixed Sigma Dimensions compatibility issue with atmosphere height (thanks pap1723 and Sigma88).

Contract Configurator 1.22.3
- Fixed reversed base open/closed requirement text (thanks Keniamin).
- Add logic to add waypoint icons into Waypoint Manager (happened automatically before KSP 1.2).
- Don't allow astronaut complex biome to be used before it's at level 2 (thanks doktorstick).
- Fixed validation issues with Rendezvous parameter (thanks doktorstick).

Contract Configurator 1.22.2
- Fix possible argumentOfPeriapsis issue (thanks Intrepidrd).

Contract Configurator 1.22.1
- Fixed issue with vessel identifier parsing introduced in 1.22.0.

Contract Configurator 1.22.0
- Added HasAntenna parameter (thanks Kerbas-ad-astra).
- Added Vessel.AntennaTransmitPower() and Vesse.AntennaRelayPower() (thanks Kerbas-ad-astra).