@@ -7,6 +7,7 @@ Contract Configurator 1.23.2
 - Fixed issue with Kerbals spawned at KSC starting an extra ~60 meters in the air (thanks Keniamin).
 - Fixed error when cancelling a contract with spawned Kerbals.
 - Fixed exception with FlyBy and ReturnFromFlyBy requirements.
+- Properly fixed Facility requirement in the tracking station (thanks Kerbas_ad_astra).
 
 Contract Configurator 1.23.1
 - Fixed major bug with VisitWaypoint not properly setting waypoint distances (thanks Keniamin and others).
